csc416/assignment_3/tests/fail/syntaxerrors/no_main_method.ram15
/**
 * Test: No Main Method
 * @author Marshall Bowers
 */
class NoMainMethod {

    public int returnOne() {
        return 1;
    }

}
